// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Get which files depend on the specified file 1`] = `
{
  "astNode": undefined,
  "children": [
    {
      "astNode": {
        "loc": {
          "end": {
            "col": 29,
            "line": 1,
          },
          "start": {
            "col": 1,
            "line": 1,
          },
        },
        "span": {
          "end": 28,
          "start": 0,
        },
      },
      "children": [
        {
          "astNode": {
            "loc": {
              "end": {
                "col": 25,
                "line": 1,
              },
              "start": {
                "col": 1,
                "line": 1,
              },
            },
            "span": {
              "end": 24,
              "start": 0,
            },
          },
          "children": [],
          "name": "features/normal/c.js",
        },
      ],
      "name": "features/normal/a.js",
    },
    {
      "astNode": {
        "loc": {
          "end": {
            "col": 29,
            "line": 1,
          },
          "start": {
            "col": 1,
            "line": 1,
          },
        },
        "span": {
          "end": 28,
          "start": 0,
        },
      },
      "children": [
        {
          "astNode": {
            "loc": {
              "end": {
                "col": 25,
                "line": 2,
              },
              "start": {
                "col": 1,
                "line": 2,
              },
            },
            "span": {
              "end": 49,
              "start": 25,
            },
          },
          "children": [],
          "name": "features/normal/c.js",
        },
      ],
      "name": "features/normal/b.js",
    },
  ],
  "name": "features/normal/utils.js",
}
`;

exports[`Get which files depend on the specified file with alias 1`] = `
{
  "astNode": undefined,
  "children": [
    {
      "astNode": {
        "loc": {
          "end": {
            "col": 29,
            "line": 1,
          },
          "start": {
            "col": 1,
            "line": 1,
          },
        },
        "span": {
          "end": 28,
          "start": 0,
        },
      },
      "children": [
        {
          "astNode": {
            "loc": {
              "end": {
                "col": 25,
                "line": 1,
              },
              "start": {
                "col": 1,
                "line": 1,
              },
            },
            "span": {
              "end": 24,
              "start": 0,
            },
          },
          "children": [],
          "name": "features/alias/c.js",
        },
      ],
      "name": "features/alias/a.js",
    },
    {
      "astNode": {
        "loc": {
          "end": {
            "col": 29,
            "line": 1,
          },
          "start": {
            "col": 1,
            "line": 1,
          },
        },
        "span": {
          "end": 28,
          "start": 0,
        },
      },
      "children": [
        {
          "astNode": {
            "loc": {
              "end": {
                "col": 25,
                "line": 2,
              },
              "start": {
                "col": 1,
                "line": 2,
              },
            },
            "span": {
              "end": 49,
              "start": 25,
            },
          },
          "children": [],
          "name": "features/alias/c.js",
        },
      ],
      "name": "features/alias/b.js",
    },
  ],
  "name": "features/alias/utils.js",
}
`;
